Ensure close button is behind sticky bar

--- a/src/Umbraco.Web.UI.Client/src/less/property-editors.less
+++ b/src/Umbraco.Web.UI.Client/src/less/property-editors.less
@@ -438,6 +438,7 @@ ul.color-picker li a  {
         top: 3px;
         right: 3px;
         cursor: pointer;
+        z-index: 1;
     }
 
     .umb-close-cropper:hover {
